Attempting to fix spacing

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -9,7 +9,7 @@
 }
 body {
   margin: 0;
-  width: 100vw;
+  width: 100%;
 }
 * {
   scroll-behavior: smooth;
@@ -116,7 +116,8 @@ button:hover {
 
 .container {
   text-align: center;
-  margin: 0px 100px 20px 200px;
+  margin: 0 auto;
+  padding: 0 10%;
 }
 
 .word-link {
