--- a/src/styles/Get-In-Touch.css
+++ b/src/styles/Get-In-Touch.css
@@ -11,8 +11,8 @@
 }
 
 .get-in-touch-btn img {
-  width: 100px;
-  height: 100px;
+  width: 80px;
+  height: 80px;
   transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
 }
 
