--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -1,5 +1,19 @@
 .NavBar {
   margin-top: 10px;
+  width: 1100px;
+  height: 150px;
+  padding: 0 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.site-logo {
+  content: url("./imgs/icons/logo3_black.svg");
+  height: 150px;
+  color: black;
+  margin-top: 30px;
+  margin-left: 30px;
 }
 
 .menu-link {
@@ -52,10 +66,19 @@
 }
 
 @media (max-width: 768px) {
+  .NavBar {
+    padding: 0px;
+    width: 100%;
+    height: 100px;
+    justify-content: center;
+  }
+
   .site-logo {
+    height: 60px;
     text-align: center;
     margin-left: 0;
     margin-top: 10px;
+    content: url("./imgs/icons/logo2_black.svg");
   }
 
   .menu-link {
